# darija-tools

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: releasing.md
src/darija_tools/: __init__.py  arabizi.py  cli.py  normalize.py
src/darija_tools/data/: arabizi_lexicon.json  loanwords.json
tests/: test_arabizi.py  test_cli.py  test_normalize.py
