[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "darija-tools"
version = "0.1.0"
description = "Small, honest NLP utilities for Moroccan Darija: normalization and Arabizi transliteration."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Sami El Akkad" }]
keywords = ["darija", "moroccan-arabic", "arabic", "nlp", "transliteration", "arabizi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Text Processing :: Linguistic",
  "Natural Language :: Arabic",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8,<9",
  "ruff>=0.11",
  "twine>=6,<7",
]

[project.urls]
Homepage = "https://github.com/Samielakkad/darija-tools"
Source = "https://github.com/Samielakkad/darija-tools"
Issues = "https://github.com/Samielakkad/darija-tools/issues"
Changelog = "https://github.com/Samielakkad/darija-tools/blob/main/CHANGELOG.md"
Documentation = "https://github.com/Samielakkad/darija-tools#readme"

[project.scripts]
darija = "darija_tools.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
darija_tools = ["data/*.json", "py.typed"]
